--- a/index.html
+++ b/index.html
@@ -27,9 +27,7 @@
       </div>
       <div class="function-button">
         <button class="btn newgame">🆕 NEW GAME</button>
-        <div class="dice">
-          <span class="dot"></span>
-        </div>
+        <div class="dice"></div>
         <button class="btn rolldice">🎲 ROLL DICE</button>
         <button class="btn hold">🔽 HOLD</button>
       </div>
