--- a/index.html
+++ b/index.html
@@ -8,30 +8,30 @@
     <title>The Pig Game</title>
   </head>
   <body>
-    <div class="main">
-      <div class="player active">
-        <h1 class="header">PLAYER 1</h1>
-        <p class="totalscore">0</p>
+    <main class="main">
+      <section class="player player--0 active">
+        <h1 class="header" id="name--0">PLAYER 1</h1>
+        <p class="totalScore" id="score--0">0</p>
         <div class="current">
           <h3>CURRENT</h3>
-          <p class="currentScore">0</p>
+          <p class="currentScore" id="current--0">0</p>
         </div>
-      </div>
-      <div class="player">
-        <h1 class="header">PLAYER 2</h1>
-        <p class="totalscore">0</p>
+      </section>
+      <section class="player player--1">
+        <h1 class="header" id="name--1">PLAYER 2</h1>
+        <p class="totalScore" id="score--1">0</p>
         <div class="current">
           <h3>CURRENT</h3>
-          <p class="currentScore">0</p>
+          <p class="currentScore" id="current--1">0</p>
         </div>
-      </div>
-      <div class="function-button">
-        <button class="btn newgame">🆕 NEW GAME</button>
-        <div class="dice"></div>
-        <button class="btn rolldice">🎲 ROLL DICE</button>
-        <button class="btn hold">🔽 HOLD</button>
-      </div>
-    </div>
+      </section>
+
+      <button class="btn newgame">🆕 NEW GAME</button>
+      <img src="dice-1.png" alt="dice" class="dice" />
+
+      <button class="btn rolldice">🎲 ROLL DICE</button>
+      <button class="btn hold">🔽 HOLD</button>
+    </main>
   </body>
   <script src="js/scripts.js"></script>
 </html>
